Created the Header, Footer, components, Home, Person and Not Found page and started the table components

--- a/src/components/Footer/style.css
+++ b/src/components/Footer/style.css
@@ -17,3 +17,8 @@ footer a {
     color: inherit;
     transition: all .6;
 }
+
+footer a:hover {
+    color: blueviolet;
+    border-bottom: 2px solid black;
+}
