--- a/src/components/Header/styles.css
+++ b/src/components/Header/styles.css
@@ -3,3 +3,16 @@
     font-size: 3.6rem;
     text-transform: uppercase;
 }
+
+nav a {
+    transition: transform .9;
+}
+
+nav a:hover {
+    border-bottom: none;
+    transform: scale(1.2);
+}
+
+nav span {
+    cursor: pointer;
+}
