--- a/src/main.css
+++ b/src/main.css
@@ -32,4 +32,12 @@ a:hover {
     font-weight: bolder;
 }
 
+.card {
+    width: 80%;
+    margin: 1.6rem auto;
+    font-size: 3.6rem;
+    color: white;
+    background-color: #323539;
+    border: 1px solid #FFE81F;
+}
 
